--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
   },
   "homepage": "https://github.com/bonifaty/my-preact-boilerplate#readme",
   "devDependencies": {
-    "b_": "^1.3.4",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.5",
     "preact": "^8.2.6",
-    "reset-css": "^2.2.1",
-    "style-loader": "^0.19.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "webpack-dev-server": "^2.9.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "webpack": "^3.8.1"
+    "file-loader": "^1.1.5",
+    "css-loader": "^0.28.7",
+    "style-loader": "^0.19.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "reset-css": "^2.2.1",
+    "b_": "^1.3.4"
   }
 }
