--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node_modules/.bin/webpack-dev-server --content-base ./docs",
+    "lint": "./node_modules/.bin/eslint ./source/",
     "build": "rm -rf ./docs && webpack --env.prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,21 +16,31 @@
     "url": "https://github.com/bonifaty/my-preact-boilerplate/issues"
   },
   "homepage": "https://github.com/bonifaty/my-preact-boilerplate#readme",
-  "devDependencies": {
+  "dependencies": {
+    "file-loader": "^1.1.5",
     "preact": "^8.2.6",
+    "reset-css": "^2.2.1"
+  },
+  "devDependencies": {
+    "b_": "^1.3.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "file-loader": "^1.1.5",
     "css-loader": "^0.28.7",
+    "eslint": "^4.12.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard-preact": "^1.1.6",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-standard": "^3.0.1",
     "style-loader": "^0.19.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "reset-css": "^2.2.1",
-    "b_": "^1.3.4"
+    "uglifyjs-webpack-plugin": "^1.1.1",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   }
 }
